remove hardcoded properties
